[project]
name = "gpt5_image_text"
description = "A ComfyUI custom node for vision + text analysis using GPT-5 and GPT-4o with direct API key input, system prompt, temperature, max tokens, and multi-image support."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai>=1.0.0"]

[project.urls]
Repository = "https://github.com/comrender/ComfyUI-gpt5_image_text"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/comrender/ComfyUI-gpt5_image_text/wiki"
"Bug Tracker" = "https://github.com/comrender/ComfyUI-gpt5_image_text/issues"

[tool.comfy]
PublisherId = "comrender"
DisplayName = "ComfyUI-gpt5_image_text"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

